Dheeraj first Commit-09/10/2017

--- a/app/src/main/res/layout/activity_signup_four.xml
+++ b/app/src/main/res/layout/activity_signup_four.xml
@@ -1,8 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_gradient_bg"
+    android:paddingTop="@dimen/dim_10"
     tools:context="com.localfriend.SignupActivityFour">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/toolbar_common" />
+
+    <LinearLayout
+        android:id="@+id/lnr_verification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/dim_10"
+        android:layout_below="@+id/toolbar_common"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enter your password"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_18"
+            android:textStyle="bold" />
+
+
+        <EditText
+            android:id="@+id/signup_edt_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dim_10"
+            android:backgroundTint="@color/white"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_16"
+
+            />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lnr_verification"
+        android:layout_centerHorizontal="true"
+        android:background="@null"
+        android:src="@drawable/panda_new_with_pt_sans" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/dim_15"
+        android:padding="@dimen/dim_10">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="Step 4 of 4"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_18"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_btn_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/rounded_curvy_white"
+            android:gravity="center"
+            android:paddingBottom="@dimen/dim_7"
+            android:paddingLeft="@dimen/dim_15"
+            android:paddingRight="@dimen/dim_15"
+            android:paddingTop="@dimen/dim_7"
+            android:text="SIGN UP"
+            android:textColor="@color/blue_text"
+            android:textSize="@dimen/dim_18" />
+    </RelativeLayout>
+</RelativeLayout>
