--- a/app/src/main/res/layout/activity_login_signup.xml
+++ b/app/src/main/res/layout/activity_login_signup.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/main_gradient_bg"
-    android:padding="@dimen/dim_10"
+    android:padding="@dimen/dim_15"
     tools:context="com.localfriend.LoginSignupActivity">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_50"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/dim_35"
         android:background="@null"
+        android:id="@+id/img_logo"
         android:src="@drawable/home_icon" />
-
-    <LinearLayout
+<Space
+    android:layout_width="wrap_content"
+    android:layout_height="@dimen/dim_130"/>
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="@dimen/dim_15"
         android:layout_marginRight="@dimen/dim_15"
         android:layout_marginBottom="@dimen/dim_50"
-        android:orientation="vertical">
+        android:orientation="vertical">-->
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner_blue"
             android:padding="@dimen/dim_10"
+            android:id="@+id/tv_hello_label"
             android:text="Hello there, I'm your Local Friend"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_14" />
@@ -39,6 +44,7 @@
             android:layout_marginTop="@dimen/dim_15"
             android:background="@drawable/rounded_corner_blue"
             android:padding="@dimen/dim_10"
+            android:id="@+id/tv_help"
             android:text="I'm here to help you with anything , anytime"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_14" />
@@ -66,5 +72,5 @@
             android:text="Already have an account ? "
             android:textColor="@color/white"
             android:textSize="@dimen/dim_16" />
-    </LinearLayout>
-</RelativeLayout>
+<!--    </LinearLayout>-->
+</LinearLayout>
